# Garageler

./: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/routes/: +page.svelte  ErrorComponet.svelte  types.ts
